add quantikz to build requirements

--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -24,6 +24,8 @@ jobs:
             ifthen
             geometry
             amsmath
+            tikz
+            quantikz
       - name: Setup Just
         uses: extractions/setup-just@v3
       - name: Build
