--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -28,6 +28,7 @@ jobs:
             quantikz
             xargs
             xkeyval
+            xstring
       - name: Setup Just
         uses: extractions/setup-just@v3
       - name: Build
