--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -29,6 +29,7 @@ jobs:
             xargs
             xkeyval
             xstring
+            mathtools
       - name: Setup Just
         uses: extractions/setup-just@v3
       - name: Build
