--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -30,6 +30,7 @@ jobs:
             xkeyval
             xstring
             mathtools
+            environ
       - name: Setup Just
         uses: extractions/setup-just@v3
       - name: Build
