--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -31,6 +31,7 @@ jobs:
             xstring
             mathtools
             environ
+            tikz-cd
       - name: Setup Just
         uses: extractions/setup-just@v3
       - name: Build
