--- a/dtmgr.toml
+++ b/dtmgr.toml
@@ -3,12 +3,9 @@ dependencies = [
     "latexmk",
     "koma-script",
     "hyperref",
-    "calc",
-    "multicol",
-    "ifthen",
     "geometry",
     "amsmath",
-    "tikz",
+    "pgf",
     "quantikz",
     "xargs",
     "xkeyval",
